@@ -1,23 +1,21 @@
 package presentation.screens.dayPartMenu
 
+import androidx.compose.foundation.layout.Arrangement
+import androidx.compose.foundation.layout.Column
 import androidx.compose.foundation.layout.padding
 import androidx.compose.material.Text
 import androidx.compose.runtime.Composable
 import androidx.compose.runtime.collectAsState
 import androidx.compose.runtime.getValue
+import androidx.compose.ui.Alignment
 import androidx.compose.ui.Modifier
 import androidx.compose.ui.text.style.TextAlign
 import androidx.compose.ui.unit.dp
 import androidx.compose.ui.unit.sp
-import data.screens.dayPartMenu.DayPart
-import org.jetbrains.compose.resources.DrawableResource
 import org.jetbrains.compose.resources.ExperimentalResourceApi
-import presentation.reusableUi.ImageButton
+import presentation.reusableUi.IconTextButton
 import zealotry.composeapp.generated.resources.Res
-import zealotry.composeapp.generated.resources.day_button
-import zealotry.composeapp.generated.resources.evening_button
-import zealotry.composeapp.generated.resources.morning
-import zealotry.composeapp.generated.resources.morning_button
+import zealotry.composeapp.generated.resources.day
 
 @OptIn(ExperimentalResourceApi::class)
 @Composable
@@ -27,24 +25,16 @@ fun DayPartMenuScreen(
 ) {
     val uiState by viewModel.uiState.collectAsState()
 
-    Text(
-        text = "Placeholder DayPartMenu ${uiState.part.name}",
-        modifier = Modifier.padding(20.dp),
-        fontSize = 24.sp,
-        textAlign = TextAlign.Center,
-    )
-    ImageButton(
-        imgRes = tempGetImg(uiState.part),
-        imgAlpha = 0.8f,
-        onClick = { onNavigate?.invoke() },
-        textRes = Res.string.morning,
-    )
-}
-
-@OptIn(ExperimentalResourceApi::class)
-fun tempGetImg(part: DayPart): DrawableResource =
-    when (part) {
-        DayPart.MORNING -> Res.drawable.morning_button
-        DayPart.MIDDAY -> Res.drawable.day_button
-        DayPart.EVENING -> Res.drawable.evening_button
+    Column(
+        horizontalAlignment = Alignment.CenterHorizontally,
+        verticalArrangement = Arrangement.spacedBy(8.dp),
+    ) {
+        Text(
+            text = "Placeholder DayPartMenu ${uiState.part.name}",
+            modifier = Modifier.padding(20.dp),
+            fontSize = 24.sp,
+            textAlign = TextAlign.Center,
+        )
+        IconTextButton(textRes = Res.string.day, onClick = onNavigate ?: {})
     }
+}
