@@ -7,6 +7,7 @@ Streak: 1
 Learned:
 Did:
     - Implement some state in DayPartMenu screen to confirm navigation works
+    - Start adding reusable ui IconTextButton, to be used for many DayPartMenu buttons
 
 16-10-2024
 Streak: 1
